@@ -42,9 +42,6 @@ public:
     template<typename CallableType, class = typename std::enable_if<std::is_rvalue_reference<CallableType&&>::value>::type>
     CompletionHandler(CallableType&& callable)
         : m_function(WTFMove(callable))
-#if !ASSERT_DISABLED
-        , m_wasConstructedOnMainThread(isMainThread())
-#endif
     {
     }
 
@@ -68,7 +65,7 @@ public:
 private:
     Function<Out(In...)> m_function;
 #if !ASSERT_DISABLED
-    bool m_wasConstructedOnMainThread;
+    bool m_wasConstructedOnMainThread { isMainThread() };
 #endif
 };
 
