@@ -1,3 +1,13 @@
+2019-08-29  Chris Dumez  <cdumez@apple.com>
+
+        CompletionHandler default constructor does not initialize `m_wasConstructedOnMainThread`
+        https://bugs.webkit.org/show_bug.cgi?id=201249
+
+        Reviewed by Joseph Pecoraro and Alex Christensen.
+
+        * wtf/CompletionHandler.h:
+        (WTF::CompletionHandler<Out):
+
 2019-08-25  Fujii Hironori  <Hironori.Fujii@sony.com>
 
         Regression(r248533) Assertion hit in isMainThread() for some clients using WTF because the main thread is not initialized
